MESSAGE("")
set(TBTK_QUIET TRUE)
FIND_PACKAGE(TBTK QUIET)

MESSAGE("")
#MESSAGE("================================== VALIDATION ==================================")
#MESSAGE("Validators will be built and installed.")
IF(TBTK_FOUND)
	INCLUDE_DIRECTORIES(
		include/
	)

	FILE(GLOB_RECURSE SRC src/*.cpp)
	FOREACH(FILE ${SRC})
		#Convert soure filename to executable filename.
		STRING(FIND ${FILE} "Validator" VALIDATOR_POSITION REVERSE)
		STRING(SUBSTRING ${FILE} ${VALIDATOR_POSITION} -1 FILENAME)
		STRING(REPLACE "/" "" FILENAME ${FILENAME})
		STRING(REPLACE "Validator" "TBTKValidator" FILENAME ${FILENAME})
		STRING(REPLACE ".cpp" "" FILENAME ${FILENAME})

		SET(APPLICATION_NAME ${FILENAME})

		#Create executable and add to tests.
		ADD_EXECUTABLE(${FILENAME} ${FILE})

		TARGET_LINK_LIBRARIES(${FILENAME} ${GTEST_BOTH_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${TBTK_LIBRARIES})

		IF(UNIX)
			INSTALL(
				FILES ${CMAKE_CURRENT_BINARY_DIR}/${FILENAME}
				DESTINATION bin
				PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
			)
		ENDIF(UNIX)
	ENDFOREACH(FILE ${SRC})

	SET(TBTK_TESTING_ENABLED TRUE PARENT_SCOPE)
ENDIF(TBTK_FOUND)
#MESSAGE("================================================================================")
