ADD_SUBDIRECTORY(Builders)
ADD_SUBDIRECTORY(Core)
ADD_SUBDIRECTORY(Elements)
ADD_SUBDIRECTORY(Exceptions)
ADD_SUBDIRECTORY(GUI)
ADD_SUBDIRECTORY(Lattices)
ADD_SUBDIRECTORY(ManyBody)
ADD_SUBDIRECTORY(Properties)
ADD_SUBDIRECTORY(PropertyExtractors)
ADD_SUBDIRECTORY(Solvers)
ADD_SUBDIRECTORY(SpecializedSolvers)
ADD_SUBDIRECTORY(StatesAndOperators)
ADD_SUBDIRECTORY(Uncategorized)
ADD_SUBDIRECTORY(Utilities)

INSTALL(
	DIRECTORY .
	DESTINATION include
	FILES_MATCHING PATTERN TBTK.h
)
