ADD_SUBDIRECTORY(Builders)
ADD_SUBDIRECTORY(Core)
ADD_SUBDIRECTORY(Elements)
ADD_SUBDIRECTORY(Exceptions)
ADD_SUBDIRECTORY(GUI)
ADD_SUBDIRECTORY(Lattices)
ADD_SUBDIRECTORY(ManyBody)
ADD_SUBDIRECTORY(Property)
ADD_SUBDIRECTORY(PropertyExtractor)
ADD_SUBDIRECTORY(Solver)
ADD_SUBDIRECTORY(SpecializedSolvers)
ADD_SUBDIRECTORY(StatesAndOperators)
ADD_SUBDIRECTORY(Uncategorized)
ADD_SUBDIRECTORY(Utilities)

INSTALL(
	DIRECTORY .
	DESTINATION include
	FILES_MATCHING PATTERN TBTK.h
)
