ADD_SUBDIRECTORY(Builders/TBTK)
ADD_SUBDIRECTORY(Core/TBTK)
ADD_SUBDIRECTORY(DataManager/TBTK)
ADD_SUBDIRECTORY(Elements/TBTK)
ADD_SUBDIRECTORY(Exceptions/TBTK)
ADD_SUBDIRECTORY(FourierTransform/TBTK)
ADD_SUBDIRECTORY(GUI/TBTK)
ADD_SUBDIRECTORY(ManyBody/TBTK)
ADD_SUBDIRECTORY(Plotter/TBTK)
ADD_SUBDIRECTORY(RayTracer/TBTK)
ADD_SUBDIRECTORY(Resource/TBTK)
ADD_SUBDIRECTORY(SpecializedSolvers/TBTK)
ADD_SUBDIRECTORY(StatesAndOperators/TBTK)
ADD_SUBDIRECTORY(TBTK)
ADD_SUBDIRECTORY(Uncategorized/TBTK)
ADD_SUBDIRECTORY(Utilities/TBTK)
