CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12.2)

SET(EXECUTABLE_NAME Executable)

PROJECT(TBTKHexagonalLattice)

FIND_PACKAGE(TBTK CONFIG REQUIRED)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/build/)

#Include paths
INCLUDE_DIRECTORIES(
	include/
	${TBTK_INCLUDE_PATHS}
)

FILE(
	GLOB
	SRC
	src/*.cpp
)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -O3")

ADD_EXECUTABLE(${EXECUTABLE_NAME} ${SRC})

TARGET_LINK_LIBRARIES(${EXECUTABLE_NAME} ${TBTK_LIBRARIES})
