#CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

ADD_SUBDIRECTORY(Resources)

SET(APPLICATION_NAME Application)

#PROJECT(TBTKEmptyProject)

#FIND_PACKAGE(TBTK CONFIG REQUIRED)

#SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/build/)

#Include paths
INCLUDE_DIRECTORIES(
	include/
)

FILE(
	GLOB
	SRC
	src/*.cpp
)

#SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -O3")

ADD_EXECUTABLE(${APPLICATION_NAME} ${SRC})

TARGET_LINK_LIBRARIES(${APPLICATION_NAME} TBTK)

IF(UNIX)
	INSTALL(
		FILES ${CMAKE_CURRENT_BINARY_DIR}/${APPLICATION_NAME}
		RENAME TBTKFeatureChecker
		DESTINATION bin
		PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
	)
ENDIF(UNIX)
