CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

SET(APPLICATION_NAME Application)

PROJECT(TBTKEmptyProject)

FIND_PACKAGE(TBTK CONFIG REQUIRED)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/build/)

#Include paths
INCLUDE_DIRECTORIES(
	include/
	${TBTK_INCLUDE_PATHS}
)

FILE(
	GLOB
	SRC
	src/*.cpp
)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -O3")

ADD_EXECUTABLE(${APPLICATION_NAME} ${SRC})

TARGET_LINK_LIBRARIES(${APPLICATION_NAME} ${TBTK_LIBRARIES})
