SET(APPLICATION_NAME MainApplication)

FILE(
	GLOB
	SRC
	src/*.cpp
)

ADD_EXECUTABLE(${APPLICATION_NAME} ${SRC})

TARGET_LINK_LIBRARIES(${APPLICATION_NAME} TBTK)

IF(UNIX)
	INSTALL(
		FILES ${CMAKE_CURRENT_BINARY_DIR}/${APPLICATION_NAME}
		RENAME TBTK
		DESTINATION bin
		PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
	)
ENDIF(UNIX)
