IF(UNIX)
	FILE(
		GLOB
		TBTK_PYTHON_PLOT_FILES
		RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}
		*.py
	)
	FOREACH(TBTK_PYTHON_PLOT_FILE ${TBTK_PYTHON_PLOT_FILES})
		CONFIGURE_FILE(
			${TBTK_PYTHON_PLOT_FILE}
			"${CMAKE_CURRENT_BINARY_DIR}/${TBTK_PYTHON_PLOT_FILE}"
		)
	ENDFOREACH(TBTK_PYTHON_PLOT_FILE)
	INSTALL(
		DIRECTORY ${CMAKE_BINARY_DIR}/Visualization/python/
		DESTINATION bin
		FILES_MATCHING PATTERN *.py
		PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
	)
ENDIF(UNIX)
