FILE(
	GLOB_RECURSE
	TBTK_DOCUMENTATION_EXAMPLE_SRC
	RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}
	*.cpp
)

IF(NOT DEFINED COMPILE_ARNOLDI_ITERATOR)
	LIST(
		REMOVE_ITEM
		TBTK_DOCUMENTATION_EXAMPLE_SRC
		Solver/ArnoldiIterator.cpp
		PropertyExtractor/ArnoldiIterator.cpp
	)
ENDIF(NOT DEFINED COMPILE_ARNOLDI_ITERATOR)

SET(TBTK_QUIET TRUE)
FIND_PACKAGE(TBTK QUIET)

INCLUDE_DIRECTORIES(include)

IF(${TBTK_DOCUMENTATION_NICE})
	ADD_DEFINITIONS(-DTBTK_DOCUMENTATION_NICE)
ENDIF(${TBTK_DOCUMENTATION_NICE})

FILE(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/figures)
FOREACH(FILE ${TBTK_DOCUMENTATION_EXAMPLE_SRC})
	CONFIGURE_FILE(
		${CMAKE_CURRENT_SOURCE_DIR}/${FILE}
		${CMAKE_CURRENT_BINARY_DIR}/${FILE}
	)
	IF(${TBTK_DOCUMENTATION_NICE})
		FILE(READ ${CMAKE_CURRENT_BINARY_DIR}/${FILE} FILE_DATA)
		STRING(REGEX REPLACE "#ifdef TBTK_DOCUMENTATION_NICE\n" "" FILE_DATA "${FILE_DATA}")
		STRING(REGEX REPLACE "#else //TBTK_DOCUMENTATION_NICE[^#]*#endif //TBTK_DOCUMENTATION_NICE\n" "" FILE_DATA "${FILE_DATA}")
#		STRING(REGEX REPLACE "TBTK_DOCUMENTATION_QUICK.*TBTK_DOCUMENTATION_QUICK\n" "" FILE_DATA "${FILE_DATA}")
#		STRING(REGEX REPLACE "TBTK_DOCUMENTATION_NICE\n" "" FILE_DATA "${FILE_DATA}")
		FILE(WRITE ${CMAKE_CURRENT_BINARY_DIR}/${FILE} "${FILE_DATA}")
	ELSE(${TBTK_DOCUMENTATION_NICE})
		FILE(READ ${CMAKE_CURRENT_BINARY_DIR}/${FILE} FILE_DATA)
		STRING(REGEX REPLACE "#ifdef TBTK_DOCUMENTATION_NICE[^#]*#else //TBTK_DOCUMENTATION_NICE\n" "" FILE_DATA "${FILE_DATA}")
		STRING(REGEX REPLACE "#endif //TBTK_DOCUMENTATION_NICE\n" "" FILE_DATA "${FILE_DATA}")
#		STRING(REGEX REPLACE "TBTK_DOCUMENTATION_QUICK\n" "" FILE_DATA "${FILE_DATA}")
#		STRING(REGEX REPLACE "TBTK_DOCUMENTATION_NICE.*TBTK_DOCUMENTATION_NICE\n" "" FILE_DATA "${FILE_DATA}")
		FILE(WRITE ${CMAKE_CURRENT_BINARY_DIR}/${FILE} "${FILE_DATA}")
	ENDIF(${TBTK_DOCUMENTATION_NICE})

	GET_FILENAME_COMPONENT(NAME ${FILE} NAME_WE)
	GET_FILENAME_COMPONENT(PATH ${FILE} DIRECTORY)
	SET(APPLICATION_NAME Example${PATH}${NAME})
	STRING(REPLACE "/" "" APPLICATION_NAME ${APPLICATION_NAME})

	SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/build/${PATH}/)
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -O3")
	ADD_EXECUTABLE(${APPLICATION_NAME} ${FILE})
	SET_TARGET_PROPERTIES(${APPLICATION_NAME} PROPERTIES OUTPUT_NAME ${NAME})
	SET_TARGET_PROPERTIES(${APPLICATION_NAME} PROPERTIES EXCLUDE_FROM_ALL TRUE)
	TARGET_LINK_LIBRARIES(${APPLICATION_NAME} ${TBTK_LIBRARIES})

	FILE(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/output/${PATH}/)
	FILE(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/output/${PATH}/${NAME}/figures)
	SET(TBTK_DOCUMENTATION_EXAMPLE_OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/output/${PATH}/${NAME}.output)
	ADD_CUSTOM_COMMAND(
		OUTPUT ${TBTK_DOCUMENTATION_EXAMPLE_OUTPUT}
		COMMAND ${CMAKE_CURRENT_BINARY_DIR}/build/${PATH}/${NAME} > ${TBTK_DOCUMENTATION_EXAMPLE_OUTPUT}
		COMMAND mv ${CMAKE_CURRENT_BINARY_DIR}/figures/* ${CMAKE_CURRENT_BINARY_DIR}/output/${PATH}/${NAME}/figures/ 2> /dev/null \; true
		DEPENDS ${APPLICATION_NAME}
	)
	STRING(REPLACE "/" "_" TBTK_DOCUMENTATION_EXAMPLE_TARGET ${TBTK_DOCUMENTATION_EXAMPLE_OUTPUT})
	ADD_CUSTOM_TARGET(
		${TBTK_DOCUMENTATION_EXAMPLE_TARGET}
		DEPENDS ${TBTK_DOCUMENTATION_EXAMPLE_OUTPUT}
	)
	LIST(APPEND TBTK_DOCUMENTATION_EXAMPLE_OUTPUTS ${TBTK_DOCUMENTATION_EXAMPLE_TARGET})
ENDFOREACH(FILE ${TBTK_DOCUMENTATION_EXAMPLE_SRC})
SET(TBTK_DOCUMENTATION_EXAMPLE_OUTPUTS ${TBTK_DOCUMENTATION_EXAMPLE_OUTPUTS} PARENT_SCOPE)
