ADD_SUBDIRECTORY(FockStateMap)
ADD_SUBDIRECTORY(Lattice)
ADD_SUBDIRECTORY(Models)
ADD_SUBDIRECTORY(Property)
ADD_SUBDIRECTORY(PropertyExtractor)
ADD_SUBDIRECTORY(Solver)
IF(${COMPILE_ARBITRARY_PRECISION})
	ADD_SUBDIRECTORY(ArbitraryPrecision)
ENDIF(${COMPILE_ARBITRARY_PRECISION})

INSTALL(
	DIRECTORY .
	DESTINATION include/TBTK
	FILES_MATCHING PATTERN TBTK.h
)
