INSTALL(
	DIRECTORY .
	DESTINATION include/TBTK/Solver
	FILES_MATCHING PATTERN *.h
	PATTERN AnalyticalContinuerContinuousFractions.h EXCLUDE
	PATTERN ArnldoIterator.h EXCLUDE
	PATTERN ArnoldiIterator* EXCLUDE
	PATTERN FLEX.h EXCLUDE
	PATTERN MatsubaraSusceptibility.h EXCLUDE
	PATTERN LinearEquationSolver* EXCLUDE
	PATTERN LUSolver* EXCLUDE
	PATTERN SelfEnergy2.h EXCLUDE
)

IF(${COMPILE_ARBITRARY_PRECISION})
	INSTALL(
		DIRECTORY .
		DESTINATION include/TBTK/Solver
		FILES_MATCHING PATTERN AnalyticalContinuerContinuousFractions.h
	)
ENDIF(${COMPILE_ARBITRARY_PRECISION})
IF(${COMPILE_ARNOLDI_ITERATOR})
	INSTALL(
		DIRECTORY .
		DESTINATION include/TBTK/Solver
		FILES_MATCHING PATTERN ArnoldiIterator.h
	)
ENDIF(${COMPILE_ARNOLDI_ITERATOR})
IF(${COMPILE_LINEAR_EQUATION_SOLVER})
	INSTALL(
		DIRECTORY .
		DESTINATION include/TBTK/Solver
		FILES_MATCHING PATTERN LinearEquationSolver.h
	)
ENDIF(${COMPILE_LINEAR_EQUATION_SOLVER})
IF(${COMPILE_LU_SOLVER})
	INSTALL(
		DIRECTORY .
		DESTINATION include/TBTK/Solver
		FILES_MATCHING PATTERN LUSolver.h
	)
ENDIF(${COMPILE_LU_SOLVER})
IF(${COMPILE_FOURIER_TRANSFORM})
	INSTALL(
		DIRECTORY .
		DESTINATION include/TBTK/Solver
		FILES_MATCHING PATTERN FLEX.h
	)
	INSTALL(
		DIRECTORY .
		DESTINATION include/TBTK/Solver
		FILES_MATCHING PATTERN MatsubaraSusceptibility.h
	)
	INSTALL(
		DIRECTORY .
		DESTINATION include/TBTK/Solver
		FILES_MATCHING PATTERN SelfEnergy2.h
	)
ENDIF(${COMPILE_FOURIER_TRANSFORM})

#ADD_SUBDIRECTORY(ArnoldiIterator/TBTK/Solver)
#ADD_SUBDIRECTORY(LinearEquationSolver/TBTK/Solver)
#ADD_SUBDIRECTORY(LUSolver/TBTK/Solver)

