INSTALL(
	DIRECTORY .
	DESTINATION include/TBTK
	FILES_MATCHING PATTERN *.h
	PATTERN FileReader.h EXCLUDE
	PATTERN FIleWriter.h EXCLUDE
)

IF(${COMPILE_FILE_READER_WRITER})
	INSTALL(
		DIRECTORY .
		DESTINATION include/TBTK
		FILES_MATCHING PATTERN FileReader.h
	)
	INSTALL(
		DIRECTORY .
		DESTINATION include/TBTK
		FILES_MATCHING PATTERN FileWriter.h
	)
ENDIF(${COMPILE_FILE_READER_WRITER})
