INSTALL(
	DIRECTORY .
	DESTINATION include/TBTK
	FILES_MATCHING PATTERN *.h
	PATTERN FileReader.h EXCLUDE
	PATTERN FIleWriter.h EXCLUDE
	PATTERN PadeApproximatorContinuousFractions.h EXCLUDE
)

IF(${COMPILE_ARBITRARY_PRECISION})
	INSTALL(
		DIRECTORY .
		DESTINATION include/TBTK
		FILES_MATCHING PATTERN PadeApproximatorContinuousFractions.h
	)
ENDIF(${COMPILE_ARBITRARY_PRECISION})

IF(${COMPILE_FILE_READER_WRITER})
	INSTALL(
		DIRECTORY .
		DESTINATION include/TBTK
		FILES_MATCHING PATTERN FileReader.h
	)
	INSTALL(
		DIRECTORY .
		DESTINATION include/TBTK
		FILES_MATCHING PATTERN FileWriter.h
	)
ENDIF(${COMPILE_FILE_READER_WRITER})
